# db2db

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lib/: CMakeLists.txt
lib/include/: source.h
lib/include/db2db/: source.h
lib/src/: nanodbc_optional.cpp  scope_guard.cpp  source.cpp
lib/tests/: sqlite_test.cpp
python_module/: CMakeLists.txt  module.cpp
